assignment3/parser.output
Terminals unused in grammar

    CHSIGN
    SIZEOF


Grammar

    0 $accept: program $end

    1 program: decl_list

    2 decl_list: decl_list decl
    3          | decl

    4 decl: var_decl
    5     | func_decl

    6 var_decl: type_spec var_decl_list SEMI

    7 scoped_var_decl: STATIC type_spec var_decl_list SEMI
    8                | type_spec var_decl_list SEMI

    9 var_decl_list: var_decl_list COMMA var_decl_init
   10              | var_decl_init

   11 var_decl_init: var_decl_id COLON simple_exp
   12              | var_decl_id

   13 var_decl_id: ID
   14            | ID LBRACKET NUMBERCONST RBRACKET

   15 type_spec: BOOL
   16          | CHAR
   17          | INT

   18 func_decl: type_spec ID LPAREN params RPAREN compound_stmt
   19          | ID LPAREN params RPAREN compound_stmt

   20 params: param_list
   21       | ε

   22 param_list: param_list SEMI param_type_list
   23           | param_type_list

   24 param_type_list: type_spec param_id_list

   25 param_id_list: param_id_list COMMA param_id
   26              | param_id

   27 param_id: ID LBRACKET RBRACKET
   28         | ID

   29 stmt: matched_stmt
   30     | unmatched_stmt

   31 matched_stmt: matched_iter_stmt
   32             | matched_select_stmt
   33             | compound_stmt
   34             | exp_stmt
   35             | return_stmt
   36             | break_stmt

   37 unmatched_stmt: unmatched_iter_stmt
   38               | unmatched_select_stmt

   39 matched_select_stmt: IF simple_exp THEN matched_stmt ELSE matched_stmt

   40 unmatched_select_stmt: IF simple_exp THEN stmt
   41                      | IF simple_exp THEN matched_stmt ELSE unmatched_stmt

   42 exp_stmt: exp SEMI
   43         | SEMI

   44 compound_stmt: LBRACE local_decls stmt_list RBRACE

   45 local_decls: local_decls scoped_var_decl
   46            | ε

   47 stmt_list: stmt_list stmt
   48          | ε

   49 matched_iter_stmt: WHILE simple_exp DO matched_stmt
   50                  | FOR ID ASGN iter_range DO matched_stmt

   51 unmatched_iter_stmt: WHILE simple_exp DO unmatched_stmt
   52                    | FOR ID ASGN iter_range DO unmatched_stmt

   53 iter_range: simple_exp TO simple_exp
   54           | simple_exp TO simple_exp BY simple_exp

   55 return_stmt: RETURN SEMI
   56            | RETURN exp SEMI

   57 break_stmt: BREAK SEMI

   58 exp: mutable assign_op exp
   59    | mutable INC
   60    | mutable DEC
   61    | simple_exp

   62 assign_op: ASGN
   63          | ADDASS
   64          | SUBASS
   65          | MULASS
   66          | DIVASS

   67 simple_exp: simple_exp OR and_exp
   68           | and_exp

   69 and_exp: and_exp AND unary_rel_exp
   70        | unary_rel_exp

   71 unary_rel_exp: NOT unary_rel_exp
   72              | rel_exp

   73 rel_exp: sum_exp rel_op sum_exp
   74        | sum_exp

   75 rel_op: LT
   76       | LEQ
   77       | GT
   78       | GEQ
   79       | EQ
   80       | NEQ

   81 sum_exp: sum_exp sum_op mul_exp
   82        | mul_exp

   83 sum_op: PLUS
   84       | MINUS

   85 mul_exp: mul_exp mul_op unary_exp
   86        | unary_exp

   87 mul_op: TIMES
   88       | DIV
   89       | MOD

   90 unary_exp: unary_op unary_exp
   91          | factor

   92 unary_op: MINUS
   93         | TIMES
   94         | TERNARY

   95 factor: mutable
   96       | immutable

   97 mutable: ID LBRACKET exp RBRACKET
   98        | ID

   99 immutable: LPAREN exp RPAREN
  100          | call
  101          | constant

  102 call: ID LPAREN args RPAREN

  103 args: arg_list
  104     | ε

  105 arg_list: arg_list COMMA exp
  106         | exp

  107 constant: NUMBERCONST
  108         | CHARCONST
  109         | STRINGCONST
  110         | TRUE
  111         | FALSE


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ID <token_data> (258) 13 14 18 19 27 28 50 52 97 98 102
    NUMBERCONST <token_data> (259) 14 107
    CHARCONST <token_data> (260) 108
    STRINGCONST <token_data> (261) 109
    BOOL <token_data> (262) 15
    INT <token_data> (263) 17
    CHAR <token_data> (264) 16
    TRUE <token_data> (265) 110
    FALSE <token_data> (266) 111
    STATIC <token_data> (267) 7
    IF <token_data> (268) 39 40 41
    ELSE <token_data> (269) 39 41
    THEN <token_data> (270) 39 40 41
    RETURN <token_data> (271) 55 56
    BREAK <token_data> (272) 57
    TO <token_data> (273) 53 54
    BY <token_data> (274) 54
    DO <token_data> (275) 49 50 51 52
    FOR <token_data> (276) 50 52
    WHILE <token_data> (277) 49 51
    ASGN <token_data> (278) 50 52 62
    ADDASS <token_data> (279) 63
    SUBASS <token_data> (280) 64
    MULASS <token_data> (281) 65
    DIVASS <token_data> (282) 66
    INC <token_data> (283) 59
    DEC <token_data> (284) 60
    OR <token_data> (285) 67
    AND <token_data> (286) 69
    NOT <token_data> (287) 71
    LT <token_data> (288) 75
    LEQ <token_data> (289) 76
    GT <token_data> (290) 77
    GEQ <token_data> (291) 78
    EQ <token_data> (292) 79
    NEQ <token_data> (293) 80
    PLUS <token_data> (294) 83
    MINUS <token_data> (295) 84 92
    TIMES <token_data> (296) 87 93
    DIV <token_data> (297) 88
    MOD <token_data> (298) 89
    TERNARY <token_data> (299) 94
    CHSIGN <token_data> (300)
    SIZEOF <token_data> (301)
    LPAREN <token_data> (302) 18 19 99 102
    RPAREN <token_data> (303) 18 19 99 102
    LBRACE <token_data> (304) 44
    RBRACE <token_data> (305) 44
    LBRACKET <token_data> (306) 14 27 97
    RBRACKET <token_data> (307) 14 27 97
    COMMA <token_data> (308) 9 25 105
    COLON <token_data> (309) 11
    SEMI <token_data> (310) 6 7 8 22 42 43 55 56 57


Nonterminals, with rules where they appear

    $accept (56)
        on left: 0
    program <tree_node> (57)
        on left: 1
        on right: 0
    decl_list <tree_node> (58)
        on left: 2 3
        on right: 1 2
    decl <tree_node> (59)
        on left: 4 5
        on right: 2 3
    var_decl <tree_node> (60)
        on left: 6
        on right: 4
    scoped_var_decl <tree_node> (61)
        on left: 7 8
        on right: 45
    var_decl_list <tree_node> (62)
        on left: 9 10
        on right: 6 7 8 9
    var_decl_init <tree_node> (63)
        on left: 11 12
        on right: 9 10
    var_decl_id <tree_node> (64)
        on left: 13 14
        on right: 11 12
    type_spec <type> (65)
        on left: 15 16 17
        on right: 6 7 8 18 24
    func_decl <tree_node> (66)
        on left: 18 19
        on right: 5
    params <tree_node> (67)
        on left: 20 21
        on right: 18 19
    param_list <tree_node> (68)
        on left: 22 23
        on right: 20 22
    param_type_list <tree_node> (69)
        on left: 24
        on right: 22 23
    param_id_list <tree_node> (70)
        on left: 25 26
        on right: 24 25
    param_id <tree_node> (71)
        on left: 27 28
        on right: 25 26
    stmt <tree_node> (72)
        on left: 29 30
        on right: 40 47
    matched_stmt <tree_node> (73)
        on left: 31 32 33 34 35 36
        on right: 29 39 41 49 50
    unmatched_stmt <tree_node> (74)
        on left: 37 38
        on right: 30 41 51 52
    matched_select_stmt <tree_node> (75)
        on left: 39
        on right: 32
    unmatched_select_stmt <tree_node> (76)
        on left: 40 41
        on right: 38
    exp_stmt <tree_node> (77)
        on left: 42 43
        on right: 34
    compound_stmt <tree_node> (78)
        on left: 44
        on right: 18 19 33
    local_decls <tree_node> (79)
        on left: 45 46
        on right: 44 45
    stmt_list <tree_node> (80)
        on left: 47 48
        on right: 44 47
    matched_iter_stmt <tree_node> (81)
        on left: 49 50
        on right: 31
    unmatched_iter_stmt <tree_node> (82)
        on left: 51 52
        on right: 37
    iter_range <tree_node> (83)
        on left: 53 54
        on right: 50 52
    return_stmt <tree_node> (84)
        on left: 55 56
        on right: 35
    break_stmt <tree_node> (85)
        on left: 57
        on right: 36
    exp <tree_node> (86)
        on left: 58 59 60 61
        on right: 42 56 58 97 99 105 106
    assign_op <op> (87)
        on left: 62 63 64 65 66
        on right: 58
    simple_exp <tree_node> (88)
        on left: 67 68
        on right: 11 39 40 41 49 51 53 54 61 67
    and_exp <tree_node> (89)
        on left: 69 70
        on right: 67 68 69
    unary_rel_exp <tree_node> (90)
        on left: 71 72
        on right: 69 70 71
    rel_exp <tree_node> (91)
        on left: 73 74
        on right: 72
    rel_op <op> (92)
        on left: 75 76 77 78 79 80
        on right: 73
    sum_exp <tree_node> (93)
        on left: 81 82
        on right: 73 74 81
    sum_op <op> (94)
        on left: 83 84
        on right: 81
    mul_exp <tree_node> (95)
        on left: 85 86
        on right: 81 82 85
    mul_op <op> (96)
        on left: 87 88 89
        on right: 85
    unary_exp <tree_node> (97)
        on left: 90 91
        on right: 85 86 90
    unary_op <op> (98)
        on left: 92 93 94
        on right: 90
    factor <tree_node> (99)
        on left: 95 96
        on right: 91
    mutable <tree_node> (100)
        on left: 97 98
        on right: 58 59 60 95
    immutable <tree_node> (101)
        on left: 99 100 101
        on right: 96
    call <tree_node> (102)
        on left: 102
        on right: 100
    args <tree_node> (103)
        on left: 103 104
        on right: 102
    arg_list <tree_node> (104)
        on left: 105 106
        on right: 103 105
    constant <tree_node> (105)
        on left: 107 108 109 110 111
        on right: 101


State 0

    0 $accept: • program $end

    ID    shift, and go to state 1
    BOOL  shift, and go to state 2
    INT   shift, and go to state 3
    CHAR  shift, and go to state 4

    program    go to state 5
    decl_list  go to state 6
    decl       go to state 7
    var_decl   go to state 8
    type_spec  go to state 9
    func_decl  go to state 10


State 1

   19 func_decl: ID • LPAREN params RPAREN compound_stmt

    LPAREN  shift, and go to state 11


State 2

   15 type_spec: BOOL •

    $default  reduce using rule 15 (type_spec)


State 3

   17 type_spec: INT •

    $default  reduce using rule 17 (type_spec)


State 4

   16 type_spec: CHAR •

    $default  reduce using rule 16 (type_spec)


State 5

    0 $accept: program • $end

    $end  shift, and go to state 12


State 6

    1 program: decl_list •
    2 decl_list: decl_list • decl

    ID    shift, and go to state 1
    BOOL  shift, and go to state 2
    INT   shift, and go to state 3
    CHAR  shift, and go to state 4

    $default  reduce using rule 1 (program)

    decl       go to state 13
    var_decl   go to state 8
    type_spec  go to state 9
    func_decl  go to state 10


State 7

    3 decl_list: decl •

    $default  reduce using rule 3 (decl_list)


State 8

    4 decl: var_decl •

    $default  reduce using rule 4 (decl)


State 9

    6 var_decl: type_spec • var_decl_list SEMI
   18 func_decl: type_spec • ID LPAREN params RPAREN compound_stmt

    ID  shift, and go to state 14

    var_decl_list  go to state 15
    var_decl_init  go to state 16
    var_decl_id    go to state 17


State 10

    5 decl: func_decl •

    $default  reduce using rule 5 (decl)


State 11

   19 func_decl: ID LPAREN • params RPAREN compound_stmt

    BOOL  shift, and go to state 2
    INT   shift, and go to state 3
    CHAR  shift, and go to state 4

    $default  reduce using rule 21 (params)

    type_spec        go to state 18
    params           go to state 19
    param_list       go to state 20
    param_type_list  go to state 21


State 12

    0 $accept: program $end •

    $default  accept


State 13

    2 decl_list: decl_list decl •

    $default  reduce using rule 2 (decl_list)


State 14

   13 var_decl_id: ID •
   14            | ID • LBRACKET NUMBERCONST RBRACKET
   18 func_decl: type_spec ID • LPAREN params RPAREN compound_stmt

    LPAREN    shift, and go to state 22
    LBRACKET  shift, and go to state 23

    $default  reduce using rule 13 (var_decl_id)


State 15

    6 var_decl: type_spec var_decl_list • SEMI
    9 var_decl_list: var_decl_list • COMMA var_decl_init

    COMMA  shift, and go to state 24
    SEMI   shift, and go to state 25


State 16

   10 var_decl_list: var_decl_init •

    $default  reduce using rule 10 (var_decl_list)


State 17

   11 var_decl_init: var_decl_id • COLON simple_exp
   12              | var_decl_id •

    COLON  shift, and go to state 26

    $default  reduce using rule 12 (var_decl_init)


State 18

   24 param_type_list: type_spec • param_id_list

    ID  shift, and go to state 27

    param_id_list  go to state 28
    param_id       go to state 29


State 19

   19 func_decl: ID LPAREN params • RPAREN compound_stmt

    RPAREN  shift, and go to state 30


State 20

   20 params: param_list •
   22 param_list: param_list • SEMI param_type_list

    SEMI  shift, and go to state 31

    $default  reduce using rule 20 (params)


State 21

   23 param_list: param_type_list •

    $default  reduce using rule 23 (param_list)


State 22

   18 func_decl: type_spec ID LPAREN • params RPAREN compound_stmt

    BOOL  shift, and go to state 2
    INT   shift, and go to state 3
    CHAR  shift, and go to state 4

    $default  reduce using rule 21 (params)

    type_spec        go to state 18
    params           go to state 32
    param_list       go to state 20
    param_type_list  go to state 21


State 23

   14 var_decl_id: ID LBRACKET • NUMBERCONST RBRACKET

    NUMBERCONST  shift, and go to state 33


State 24

    9 var_decl_list: var_decl_list COMMA • var_decl_init

    ID  shift, and go to state 34

    var_decl_init  go to state 35
    var_decl_id    go to state 17


State 25

    6 var_decl: type_spec var_decl_list SEMI •

    $default  reduce using rule 6 (var_decl)


State 26

   11 var_decl_init: var_decl_id COLON • simple_exp

    ID           shift, and go to state 36
    NUMBERCONST  shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    TRUE         shift, and go to state 40
    FALSE        shift, and go to state 41
    NOT          shift, and go to state 42
    MINUS        shift, and go to state 43
    TIMES        shift, and go to state 44
    TERNARY      shift, and go to state 45
    LPAREN       shift, and go to state 46

    simple_exp     go to state 47
    and_exp        go to state 48
    unary_rel_exp  go to state 49
    rel_exp        go to state 50
    sum_exp        go to state 51
    mul_exp        go to state 52
    unary_exp      go to state 53
    unary_op       go to state 54
    factor         go to state 55
    mutable        go to state 56
    immutable      go to state 57
    call           go to state 58
    constant       go to state 59


State 27

   27 param_id: ID • LBRACKET RBRACKET
   28         | ID •

    LBRACKET  shift, and go to state 60

    $default  reduce using rule 28 (param_id)


State 28

   24 param_type_list: type_spec param_id_list •
   25 param_id_list: param_id_list • COMMA param_id

    COMMA  shift, and go to state 61

    $default  reduce using rule 24 (param_type_list)


State 29

   26 param_id_list: param_id •

    $default  reduce using rule 26 (param_id_list)


State 30

   19 func_decl: ID LPAREN params RPAREN • compound_stmt

    LBRACE  shift, and go to state 62

    compound_stmt  go to state 63


State 31

   22 param_list: param_list SEMI • param_type_list

    BOOL  shift, and go to state 2
    INT   shift, and go to state 3
    CHAR  shift, and go to state 4

    type_spec        go to state 18
    param_type_list  go to state 64


State 32

   18 func_decl: type_spec ID LPAREN params • RPAREN compound_stmt

    RPAREN  shift, and go to state 65


State 33

   14 var_decl_id: ID LBRACKET NUMBERCONST • RBRACKET

    RBRACKET  shift, and go to state 66


State 34

   13 var_decl_id: ID •
   14            | ID • LBRACKET NUMBERCONST RBRACKET

    LBRACKET  shift, and go to state 23

    $default  reduce using rule 13 (var_decl_id)


State 35

    9 var_decl_list: var_decl_list COMMA var_decl_init •

    $default  reduce using rule 9 (var_decl_list)


State 36

   97 mutable: ID • LBRACKET exp RBRACKET
   98        | ID •
  102 call: ID • LPAREN args RPAREN

    LPAREN    shift, and go to state 67
    LBRACKET  shift, and go to state 68

    $default  reduce using rule 98 (mutable)


State 37

  107 constant: NUMBERCONST •

    $default  reduce using rule 107 (constant)


State 38

  108 constant: CHARCONST •

    $default  reduce using rule 108 (constant)


State 39

  109 constant: STRINGCONST •

    $default  reduce using rule 109 (constant)


State 40

  110 constant: TRUE •

    $default  reduce using rule 110 (constant)


State 41

  111 constant: FALSE •

    $default  reduce using rule 111 (constant)


State 42

   71 unary_rel_exp: NOT • unary_rel_exp

    ID           shift, and go to state 36
    NUMBERCONST  shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    TRUE         shift, and go to state 40
    FALSE        shift, and go to state 41
    NOT          shift, and go to state 42
    MINUS        shift, and go to state 43
    TIMES        shift, and go to state 44
    TERNARY      shift, and go to state 45
    LPAREN       shift, and go to state 46

    unary_rel_exp  go to state 69
    rel_exp        go to state 50
    sum_exp        go to state 51
    mul_exp        go to state 52
    unary_exp      go to state 53
    unary_op       go to state 54
    factor         go to state 55
    mutable        go to state 56
    immutable      go to state 57
    call           go to state 58
    constant       go to state 59


State 43

   92 unary_op: MINUS •

    $default  reduce using rule 92 (unary_op)


State 44

   93 unary_op: TIMES •

    $default  reduce using rule 93 (unary_op)


State 45

   94 unary_op: TERNARY •

    $default  reduce using rule 94 (unary_op)


State 46

   99 immutable: LPAREN • exp RPAREN

    ID           shift, and go to state 36
    NUMBERCONST  shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    TRUE         shift, and go to state 40
    FALSE        shift, and go to state 41
    NOT          shift, and go to state 42
    MINUS        shift, and go to state 43
    TIMES        shift, and go to state 44
    TERNARY      shift, and go to state 45
    LPAREN       shift, and go to state 46

    exp            go to state 70
    simple_exp     go to state 71
    and_exp        go to state 48
    unary_rel_exp  go to state 49
    rel_exp        go to state 50
    sum_exp        go to state 51
    mul_exp        go to state 52
    unary_exp      go to state 53
    unary_op       go to state 54
    factor         go to state 55
    mutable        go to state 72
    immutable      go to state 57
    call           go to state 58
    constant       go to state 59


State 47

   11 var_decl_init: var_decl_id COLON simple_exp •
   67 simple_exp: simple_exp • OR and_exp

    OR  shift, and go to state 73

    $default  reduce using rule 11 (var_decl_init)


State 48

   68 simple_exp: and_exp •
   69 and_exp: and_exp • AND unary_rel_exp

    AND  shift, and go to state 74

    $default  reduce using rule 68 (simple_exp)


State 49

   70 and_exp: unary_rel_exp •

    $default  reduce using rule 70 (and_exp)


State 50

   72 unary_rel_exp: rel_exp •

    $default  reduce using rule 72 (unary_rel_exp)


State 51

   73 rel_exp: sum_exp • rel_op sum_exp
   74        | sum_exp •
   81 sum_exp: sum_exp • sum_op mul_exp

    LT     shift, and go to state 75
    LEQ    shift, and go to state 76
    GT     shift, and go to state 77
    GEQ    shift, and go to state 78
    EQ     shift, and go to state 79
    NEQ    shift, and go to state 80
    PLUS   shift, and go to state 81
    MINUS  shift, and go to state 82

    $default  reduce using rule 74 (rel_exp)

    rel_op  go to state 83
    sum_op  go to state 84


State 52

   82 sum_exp: mul_exp •
   85 mul_exp: mul_exp • mul_op unary_exp

    TIMES  shift, and go to state 85
    DIV    shift, and go to state 86
    MOD    shift, and go to state 87

    $default  reduce using rule 82 (sum_exp)

    mul_op  go to state 88


State 53

   86 mul_exp: unary_exp •

    $default  reduce using rule 86 (mul_exp)


State 54

   90 unary_exp: unary_op • unary_exp

    ID           shift, and go to state 36
    NUMBERCONST  shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    TRUE         shift, and go to state 40
    FALSE        shift, and go to state 41
    MINUS        shift, and go to state 43
    TIMES        shift, and go to state 44
    TERNARY      shift, and go to state 45
    LPAREN       shift, and go to state 46

    unary_exp  go to state 89
    unary_op   go to state 54
    factor     go to state 55
    mutable    go to state 56
    immutable  go to state 57
    call       go to state 58
    constant   go to state 59


State 55

   91 unary_exp: factor •

    $default  reduce using rule 91 (unary_exp)


State 56

   95 factor: mutable •

    $default  reduce using rule 95 (factor)


State 57

   96 factor: immutable •

    $default  reduce using rule 96 (factor)


State 58

  100 immutable: call •

    $default  reduce using rule 100 (immutable)


State 59

  101 immutable: constant •

    $default  reduce using rule 101 (immutable)


State 60

   27 param_id: ID LBRACKET • RBRACKET

    RBRACKET  shift, and go to state 90


State 61

   25 param_id_list: param_id_list COMMA • param_id

    ID  shift, and go to state 27

    param_id  go to state 91


State 62

   44 compound_stmt: LBRACE • local_decls stmt_list RBRACE

    $default  reduce using rule 46 (local_decls)

    local_decls  go to state 92


State 63

   19 func_decl: ID LPAREN params RPAREN compound_stmt •

    $default  reduce using rule 19 (func_decl)


State 64

   22 param_list: param_list SEMI param_type_list •

    $default  reduce using rule 22 (param_list)


State 65

   18 func_decl: type_spec ID LPAREN params RPAREN • compound_stmt

    LBRACE  shift, and go to state 62

    compound_stmt  go to state 93


State 66

   14 var_decl_id: ID LBRACKET NUMBERCONST RBRACKET •

    $default  reduce using rule 14 (var_decl_id)


State 67

  102 call: ID LPAREN • args RPAREN

    ID           shift, and go to state 36
    NUMBERCONST  shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    TRUE         shift, and go to state 40
    FALSE        shift, and go to state 41
    NOT          shift, and go to state 42
    MINUS        shift, and go to state 43
    TIMES        shift, and go to state 44
    TERNARY      shift, and go to state 45
    LPAREN       shift, and go to state 46

    $default  reduce using rule 104 (args)

    exp            go to state 94
    simple_exp     go to state 71
    and_exp        go to state 48
    unary_rel_exp  go to state 49
    rel_exp        go to state 50
    sum_exp        go to state 51
    mul_exp        go to state 52
    unary_exp      go to state 53
    unary_op       go to state 54
    factor         go to state 55
    mutable        go to state 72
    immutable      go to state 57
    call           go to state 58
    args           go to state 95
    arg_list       go to state 96
    constant       go to state 59


State 68

   97 mutable: ID LBRACKET • exp RBRACKET

    ID           shift, and go to state 36
    NUMBERCONST  shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    TRUE         shift, and go to state 40
    FALSE        shift, and go to state 41
    NOT          shift, and go to state 42
    MINUS        shift, and go to state 43
    TIMES        shift, and go to state 44
    TERNARY      shift, and go to state 45
    LPAREN       shift, and go to state 46

    exp            go to state 97
    simple_exp     go to state 71
    and_exp        go to state 48
    unary_rel_exp  go to state 49
    rel_exp        go to state 50
    sum_exp        go to state 51
    mul_exp        go to state 52
    unary_exp      go to state 53
    unary_op       go to state 54
    factor         go to state 55
    mutable        go to state 72
    immutable      go to state 57
    call           go to state 58
    constant       go to state 59


State 69

   71 unary_rel_exp: NOT unary_rel_exp •

    $default  reduce using rule 71 (unary_rel_exp)


State 70

   99 immutable: LPAREN exp • RPAREN

    RPAREN  shift, and go to state 98


State 71

   61 exp: simple_exp •
   67 simple_exp: simple_exp • OR and_exp

    OR  shift, and go to state 73

    $default  reduce using rule 61 (exp)


State 72

   58 exp: mutable • assign_op exp
   59    | mutable • INC
   60    | mutable • DEC
   95 factor: mutable •

    ASGN    shift, and go to state 99
    ADDASS  shift, and go to state 100
    SUBASS  shift, and go to state 101
    MULASS  shift, and go to state 102
    DIVASS  shift, and go to state 103
    INC     shift, and go to state 104
    DEC     shift, and go to state 105

    $default  reduce using rule 95 (factor)

    assign_op  go to state 106


State 73

   67 simple_exp: simple_exp OR • and_exp

    ID           shift, and go to state 36
    NUMBERCONST  shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    TRUE         shift, and go to state 40
    FALSE        shift, and go to state 41
    NOT          shift, and go to state 42
    MINUS        shift, and go to state 43
    TIMES        shift, and go to state 44
    TERNARY      shift, and go to state 45
    LPAREN       shift, and go to state 46

    and_exp        go to state 107
    unary_rel_exp  go to state 49
    rel_exp        go to state 50
    sum_exp        go to state 51
    mul_exp        go to state 52
    unary_exp      go to state 53
    unary_op       go to state 54
    factor         go to state 55
    mutable        go to state 56
    immutable      go to state 57
    call           go to state 58
    constant       go to state 59


State 74

   69 and_exp: and_exp AND • unary_rel_exp

    ID           shift, and go to state 36
    NUMBERCONST  shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    TRUE         shift, and go to state 40
    FALSE        shift, and go to state 41
    NOT          shift, and go to state 42
    MINUS        shift, and go to state 43
    TIMES        shift, and go to state 44
    TERNARY      shift, and go to state 45
    LPAREN       shift, and go to state 46

    unary_rel_exp  go to state 108
    rel_exp        go to state 50
    sum_exp        go to state 51
    mul_exp        go to state 52
    unary_exp      go to state 53
    unary_op       go to state 54
    factor         go to state 55
    mutable        go to state 56
    immutable      go to state 57
    call           go to state 58
    constant       go to state 59


State 75

   75 rel_op: LT •

    $default  reduce using rule 75 (rel_op)


State 76

   76 rel_op: LEQ •

    $default  reduce using rule 76 (rel_op)


State 77

   77 rel_op: GT •

    $default  reduce using rule 77 (rel_op)


State 78

   78 rel_op: GEQ •

    $default  reduce using rule 78 (rel_op)


State 79

   79 rel_op: EQ •

    $default  reduce using rule 79 (rel_op)


State 80

   80 rel_op: NEQ •

    $default  reduce using rule 80 (rel_op)


State 81

   83 sum_op: PLUS •

    $default  reduce using rule 83 (sum_op)


State 82

   84 sum_op: MINUS •

    $default  reduce using rule 84 (sum_op)


State 83

   73 rel_exp: sum_exp rel_op • sum_exp

    ID           shift, and go to state 36
    NUMBERCONST  shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    TRUE         shift, and go to state 40
    FALSE        shift, and go to state 41
    MINUS        shift, and go to state 43
    TIMES        shift, and go to state 44
    TERNARY      shift, and go to state 45
    LPAREN       shift, and go to state 46

    sum_exp    go to state 109
    mul_exp    go to state 52
    unary_exp  go to state 53
    unary_op   go to state 54
    factor     go to state 55
    mutable    go to state 56
    immutable  go to state 57
    call       go to state 58
    constant   go to state 59


State 84

   81 sum_exp: sum_exp sum_op • mul_exp

    ID           shift, and go to state 36
    NUMBERCONST  shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    TRUE         shift, and go to state 40
    FALSE        shift, and go to state 41
    MINUS        shift, and go to state 43
    TIMES        shift, and go to state 44
    TERNARY      shift, and go to state 45
    LPAREN       shift, and go to state 46

    mul_exp    go to state 110
    unary_exp  go to state 53
    unary_op   go to state 54
    factor     go to state 55
    mutable    go to state 56
    immutable  go to state 57
    call       go to state 58
    constant   go to state 59


State 85

   87 mul_op: TIMES •

    $default  reduce using rule 87 (mul_op)


State 86

   88 mul_op: DIV •

    $default  reduce using rule 88 (mul_op)


State 87

   89 mul_op: MOD •

    $default  reduce using rule 89 (mul_op)


State 88

   85 mul_exp: mul_exp mul_op • unary_exp

    ID           shift, and go to state 36
    NUMBERCONST  shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    TRUE         shift, and go to state 40
    FALSE        shift, and go to state 41
    MINUS        shift, and go to state 43
    TIMES        shift, and go to state 44
    TERNARY      shift, and go to state 45
    LPAREN       shift, and go to state 46

    unary_exp  go to state 111
    unary_op   go to state 54
    factor     go to state 55
    mutable    go to state 56
    immutable  go to state 57
    call       go to state 58
    constant   go to state 59


State 89

   90 unary_exp: unary_op unary_exp •

    $default  reduce using rule 90 (unary_exp)


State 90

   27 param_id: ID LBRACKET RBRACKET •

    $default  reduce using rule 27 (param_id)


State 91

   25 param_id_list: param_id_list COMMA param_id •

    $default  reduce using rule 25 (param_id_list)


State 92

   44 compound_stmt: LBRACE local_decls • stmt_list RBRACE
   45 local_decls: local_decls • scoped_var_decl

    BOOL    shift, and go to state 2
    INT     shift, and go to state 3
    CHAR    shift, and go to state 4
    STATIC  shift, and go to state 112

    $default  reduce using rule 48 (stmt_list)

    scoped_var_decl  go to state 113
    type_spec        go to state 114
    stmt_list        go to state 115


State 93

   18 func_decl: type_spec ID LPAREN params RPAREN compound_stmt •

    $default  reduce using rule 18 (func_decl)


State 94

  106 arg_list: exp •

    $default  reduce using rule 106 (arg_list)


State 95

  102 call: ID LPAREN args • RPAREN

    RPAREN  shift, and go to state 116


State 96

  103 args: arg_list •
  105 arg_list: arg_list • COMMA exp

    COMMA  shift, and go to state 117

    $default  reduce using rule 103 (args)


State 97

   97 mutable: ID LBRACKET exp • RBRACKET

    RBRACKET  shift, and go to state 118


State 98

   99 immutable: LPAREN exp RPAREN •

    $default  reduce using rule 99 (immutable)


State 99

   62 assign_op: ASGN •

    $default  reduce using rule 62 (assign_op)


State 100

   63 assign_op: ADDASS •

    $default  reduce using rule 63 (assign_op)


State 101

   64 assign_op: SUBASS •

    $default  reduce using rule 64 (assign_op)


State 102

   65 assign_op: MULASS •

    $default  reduce using rule 65 (assign_op)


State 103

   66 assign_op: DIVASS •

    $default  reduce using rule 66 (assign_op)


State 104

   59 exp: mutable INC •

    $default  reduce using rule 59 (exp)


State 105

   60 exp: mutable DEC •

    $default  reduce using rule 60 (exp)


State 106

   58 exp: mutable assign_op • exp

    ID           shift, and go to state 36
    NUMBERCONST  shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    TRUE         shift, and go to state 40
    FALSE        shift, and go to state 41
    NOT          shift, and go to state 42
    MINUS        shift, and go to state 43
    TIMES        shift, and go to state 44
    TERNARY      shift, and go to state 45
    LPAREN       shift, and go to state 46

    exp            go to state 119
    simple_exp     go to state 71
    and_exp        go to state 48
    unary_rel_exp  go to state 49
    rel_exp        go to state 50
    sum_exp        go to state 51
    mul_exp        go to state 52
    unary_exp      go to state 53
    unary_op       go to state 54
    factor         go to state 55
    mutable        go to state 72
    immutable      go to state 57
    call           go to state 58
    constant       go to state 59


State 107

   67 simple_exp: simple_exp OR and_exp •
   69 and_exp: and_exp • AND unary_rel_exp

    AND  shift, and go to state 74

    $default  reduce using rule 67 (simple_exp)


State 108

   69 and_exp: and_exp AND unary_rel_exp •

    $default  reduce using rule 69 (and_exp)


State 109

   73 rel_exp: sum_exp rel_op sum_exp •
   81 sum_exp: sum_exp • sum_op mul_exp

    PLUS   shift, and go to state 81
    MINUS  shift, and go to state 82

    $default  reduce using rule 73 (rel_exp)

    sum_op  go to state 84


State 110

   81 sum_exp: sum_exp sum_op mul_exp •
   85 mul_exp: mul_exp • mul_op unary_exp

    TIMES  shift, and go to state 85
    DIV    shift, and go to state 86
    MOD    shift, and go to state 87

    $default  reduce using rule 81 (sum_exp)

    mul_op  go to state 88


State 111

   85 mul_exp: mul_exp mul_op unary_exp •

    $default  reduce using rule 85 (mul_exp)


State 112

    7 scoped_var_decl: STATIC • type_spec var_decl_list SEMI

    BOOL  shift, and go to state 2
    INT   shift, and go to state 3
    CHAR  shift, and go to state 4

    type_spec  go to state 120


State 113

   45 local_decls: local_decls scoped_var_decl •

    $default  reduce using rule 45 (local_decls)


State 114

    8 scoped_var_decl: type_spec • var_decl_list SEMI

    ID  shift, and go to state 34

    var_decl_list  go to state 121
    var_decl_init  go to state 16
    var_decl_id    go to state 17


State 115

   44 compound_stmt: LBRACE local_decls stmt_list • RBRACE
   47 stmt_list: stmt_list • stmt
